feat: choose the language of a book request
